# BlockNet

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.vue  Titlebar.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nethernet/: Cargo.toml
src-tauri/nethernet/src/protocol/packet/discovery/: crypto.rs
src-tauri/nethernet/src/signaling/: lan.rs
src-tauri/src/: lib.rs  main.rs  p2p.rs  signaling.rs
src/components/: ConnectModal.vue  HostModal.vue  PeerList.vue
src/views/: HomeView.vue
