[package]
name = "blocknet"
version = "0.1.1"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blocknet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
regex = "1.12.4"
nethernet = { path = "../../referens/nethernet" }
quinn = "0.11.2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
reqwest-eventsource = "0.5"
futures-util = "0.3.32"
