[package]
name = "nethernet"
version = "0.2.0"
edition = "2024"
readme = "README.md"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.52.3", features = ["net", "sync", "time", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tracing = "0.1.44"
bitflags = "2.12.1"
bytes = "1.11.1"
thiserror = "2.0.17"
webrtc = "0.17.0"
futures = "0.3.32"
aes = "0.9.1"
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4.3"
rand = "0.10.1"
serde_json = "1.0.150"

[dev-dependencies]
tracing-subscriber = "0.3.23"
criterion = "0.8.2"

[lib]
bench = false

[[bench]]
name = "nethernet"
harness = false
